# Black_Belt

./: .gitignore
1/1.2/Banned_domens/: .clang-tidy  output.txt  san_fail.cpp
1/1.2/Part_E/: CMakeLists.txt
1/1.2/Part_F/: CMakeLists.txt
1/1.2/Part_F/src/: svg.h
1/1.2/Personal_budget/: san_fail  san_fail.cpp
1/1.2/Transport_directory/: CMakeLists.txt
1/1.2/Transport_directory/part_e_san_fail/: router.h
1/1.5/Part_E_by_authors/: CMakeLists.txt  Types.cpp  Types.h  builder.cpp  builder.h  city_router.cpp  city_router.h  graph.h  json.cpp  json.h  main.cpp  router.h
